--- a/Proyectos/demo/src/main/resources/edu/teclemas/vacaciones/vacaciones.fxml
+++ b/Proyectos/demo/src/main/resources/edu/teclemas/vacaciones/vacaciones.fxml
@@ -16,10 +16,10 @@
       <Label layoutX="46.0" layoutY="111.0" text="Fecha Fin" />
       <TextField fx:id="txtIdentificacion" layoutX="160.0" layoutY="35.0" prefHeight="25.0" prefWidth="175.0" />
       <DatePicker fx:id="dpFeInicio" layoutX="160.0" layoutY="72.0" />
-      <DatePicker fx:id="feFin" layoutX="160.0" layoutY="107.0" />
+      <DatePicker fx:id="dpFeFin" layoutX="160.0" layoutY="107.0" />
       <Button fx:id="btnIngresar" layoutX="428.0" layoutY="43.0" mnemonicParsing="false" onAction="#ingresar" text="Ingresar" />
       <Button fx:id="btnLimpiar" layoutX="428.0" layoutY="95.0" mnemonicParsing="false" onAction="#limpiar" text="Limpiar" />
-      <TableView layoutX="33.0" layoutY="156.0" prefHeight="200.0" prefWidth="500.0">
+      <TableView fx:id="tcVacaciones" layoutX="33.0" layoutY="156.0" prefHeight="200.0" prefWidth="500.0">
         <columns>
           <TableColumn fx:id="identificacion" prefWidth="210.00003051757812" text="Identificacion" />
           <TableColumn fx:id="feInicio" minWidth="0.0" prefWidth="146.6666259765625" text="Fecha Inicio" />
